--- a/tox.ini
+++ b/tox.ini
@@ -78,8 +78,8 @@ allowlist_externals =
 deps =
     -r{toxinidir}/requirements/quality.txt
 commands =
-    pylint xblocks_contrib test_utils manage.py
+    pylint xblocks_contrib manage.py
     pycodestyle xblocks_contrib manage.py
     pydocstyle xblocks_contrib manage.py
-    isort --check-only --diff test_utils xblocks_contrib manage.py
+    isort --check-only --diff xblocks_contrib manage.py
     make selfcheck
