fix: test issues

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
 allowlist_externals =
     mkdir
 commands =
+    pip install -e .
     mkdir -p var
     pytest {posargs}
 
@@ -78,8 +79,8 @@ allowlist_externals =
 deps =
     -r{toxinidir}/requirements/quality.txt
 commands =
-    pylint xblocks_contrib manage.py
-    pycodestyle xblocks_contrib manage.py
-    pydocstyle xblocks_contrib manage.py
-    isort --check-only --diff xblocks_contrib manage.py
+    pylint xblocks_contrib
+    pycodestyle xblocks_contrib
+    pydocstyle xblocks_contrib
+    isort --check-only --diff xblocks_contrib
     make selfcheck
