--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,39 +5,40 @@ on:
     branches: [main]
   pull_request:
     branches:
-    - '**'
-
+      - '**'
 
 jobs:
   run_tests:
-    name: tests
-    runs-on: ${{ matrix.os }}
+    name: Run Tests and Coverage
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        os: [ubuntu-24.04]
         python-version: ['3.11', '3.12']
         toxenv: [quality, docs, django42, django51]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: setup python
+    - name: Check out code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
-    - name: Install pip
+    - name: Install dependencies
       run: pip install -r requirements/pip.txt
 
-    - name: Install Dependencies
-      run: pip install -r requirements/ci.txt
+    - name: Install tox
+      run: pip install tox
 
-    - name: Run Tests
+    - name: Run Tox
       env:
         TOXENV: ${{ matrix.toxenv }}
       run: tox
 
-    - name: Run coverage
+    - name: Upload coverage to Codecov
       if: matrix.python-version == '3.12' && matrix.toxenv == 'django42'
       uses: codecov/codecov-action@v4
       with:
