--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -5,26 +5,27 @@ on:
     types: [published]
 
 jobs:
-
   push:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: setup python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Install pip
-        run: pip install -r requirements/pip.txt
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.12
+        cache: 'pip'
 
-      - name: Build package
-        run: python setup.py sdist bdist_wheel
+    - name: Install dependencies
+      run: pip install -r requirements/pip.txt
 
-      - name: Publish to PyPi
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_UPLOAD_TOKEN }}
+    - name: Build package
+      run: python setup.py sdist bdist_wheel
+
+    - name: Publish to PyPi
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_UPLOAD_TOKEN }}
