--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -3,7 +3,7 @@
 
 -r pip-tools.txt          # pip-tools and its dependencies, for managing requirements files
 -r quality.txt            # Core and quality check dependencies
--r ci.txt                 # dependencies for setting up testing in CI
+-r test.txt               # dependencies for setting up testing
 
 diff-cover                # Changeset diff test coverage
 edx-i18n-tools            # For i18n_tool dummy
