--- a/requirements/base.in
+++ b/requirements/base.in
@@ -5,3 +5,6 @@ django-statici18n
 edx-i18n-tools
 XBlock
 openedx-django-pyfs
+# TODO: Run python reqs update
+edx-opaque-keys
+edx-django-utils>=5.14.1
