--- a/xblocks_contrib/video/package.json
+++ b/xblocks_contrib/video/package.json
@@ -5,16 +5,14 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
-    "build-dev": "webpack --config webpack.dev.config.js",
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "draggabilly": "^3.0.0",
     "edx-ui-toolkit": "1.8.7",
     "hls.js": "0.14.17",
-    "underscore": "^1.13.7",
-    "webpack-merge": "^6.0.1"
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
