--- a/xblocks_contrib/video/package.json
+++ b/xblocks_contrib/video/package.json
@@ -5,7 +5,8 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.prod.config.js",
+    "build-dev": "webpack --config webpack.dev.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
