--- a/xblocks_contrib/video/package.json
+++ b/xblocks_contrib/video/package.json
@@ -13,7 +13,8 @@
     "draggabilly": "^3.0.0",
     "edx-ui-toolkit": "1.8.7",
     "hls.js": "0.14.17",
-    "underscore": "^1.13.7"
+    "underscore": "^1.13.7",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
