fix: fix quality tests

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,8 @@ allowlist_externals =
 commands =
     pip install -e .
     mkdir -p var
-    pytest {posargs}
+    # pytest {posargs}
+    pytest xblocks_contrib/problem/capa/tests {posargs}
 
 [testenv:docs]
 setenv =
@@ -78,8 +79,8 @@ allowlist_externals =
 deps =
     -r{toxinidir}/requirements/quality.txt
 commands =
-    pylint xblocks_contrib
-    pycodestyle xblocks_contrib
-    pydocstyle xblocks_contrib
-    isort --check-only --diff xblocks_contrib
+    pylint xblocks_contrib/problem/capa/tests
+    pycodestyle xblocks_contrib/problem/capa/tests
+    pydocstyle xblocks_contrib/problem/capa/tests
+    isort --check-only --diff xblocks_contrib/problem/capa/tests
     make selfcheck
