--- a/.github/workflows/javascript-tests.yml
+++ b/.github/workflows/javascript-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20]
+        node-version: [24]
 
     steps:
       - name: Check out repository
@@ -41,7 +41,7 @@ jobs:
           sudo apt-get install -y libdbus-glib-1-2 libgtk-3-0 xvfb
 
       - name: Install npm dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests
-        run: npm run test:ci || echo "⚠️ Tests skipped — no workspaces available"
+        run: xvfb-run --auto-servernum npm run test || echo "⚠️ Tests skipped — no workspaces available"
