--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -17,6 +17,16 @@ jobs:
       with:
         python-version: 3.12
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v6
+      with:
+        node-version: '24'
+
+    - name: Build JavaScript bundles
+      run: |
+        npm install
+        npm run build
+
     - name: Install dependencies
       run: pip install -r requirements/pip.txt
 
