--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ __pycache__
 /.installed.cfg
 /lib
 /lib64
+node_modules
+public
 
 # Installer logs
 pip-log.txt
@@ -34,6 +36,7 @@ pip-log.txt
 .tox
 coverage.xml
 htmlcov/
+coverage/
 
 # Virtual environments
 /venv/
