--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,4 @@ include LICENSE.txt
 include README.rst
 include requirements/base.in
 include requirements/constraints.txt
-recursive-include xblocks_contrib/public *
-recursive-include xblocks_contrib *.html *.png *.gif *.js *.css *.jpg *.jpeg *.svg
+recursive-include xblocks_contrib *.html *.png *.gif *.js *.css *.jpg *.jpeg *.svg **/public *
