fix: pin setuptools

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ norecursedirs = .* docs requirements site-packages
 
 [testenv]
 deps =
+    setuptools<81               # temporary pin to resolve pkg_resources failure
     django42: Django>=4.2,<5.0
     django52: Django>=5.2,<6.0
     -r{toxinidir}/requirements/test.txt
