fix: pin setuptools

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ allowlist_externals =
     make
     rm
 deps =
+    setuptools<81               # temporary pin to resolve pkg_resources failure
     -r{toxinidir}/requirements/doc.txt
 commands =
     doc8 --ignore-path docs/_build README.rst docs
