fix: pinning setuptool as tests are breaking due to some update in package

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ deps =
     django42: Django>=4.2,<5.0
     django52: Django>=5.2,<6.0
     -r{toxinidir}/requirements/test.txt
+    -r{toxinidir}/requirements/pip.txt
 allowlist_externals =
     mkdir
 commands =
@@ -41,6 +42,7 @@ allowlist_externals =
     rm
 deps =
     -r{toxinidir}/requirements/doc.txt
+    -r{toxinidir}/requirements/pip.txt
 commands =
     doc8 --ignore-path docs/_build README.rst docs
     rm -f docs/xblocks_contrib.rst
