--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ allowlist_externals =
 commands =
     pip install -e .
     mkdir -p var
-    pytest {posargs} -s
+    pytest {posargs} xblocks_contrib
 
 [testenv:docs]
 setenv =
