chore: Move test-settings file to root of repo
* chore: Move test-settings file to the root of the repository because of experiencing the issue
Issue detail:
When settings file lived inside the xblocks_contrib package, Django was forced to import xblocks_contrib/init.py before the settings were fully loaded. This caused a circular import: init.py would try to load blocks before Django was ready, resulting in an AppRegistryNotReady error during tests.

--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,15 @@ max-line-length = 120
 match-dir = (?!migrations)
 
 [pytest]
-DJANGO_SETTINGS_MODULE = xblocks_contrib.test_settings
+DJANGO_SETTINGS_MODULE = test_settings
 django_find_project = false
 addopts = --cov xblocks_contrib --cov-report term-missing --cov-report xml
 norecursedirs = .* docs requirements site-packages
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
+    DJANGO_SETTINGS_MODULE = test_settings
 deps =
     django42: Django>=4.2,<5.0
     django52: Django>=5.2,<6.0
@@ -30,7 +33,7 @@ allowlist_externals =
 commands =
     pip install -e .
     mkdir -p var
-    pytest {posargs} -s
+    pytest {posargs} xblocks_contrib
 
 [testenv:docs]
 setenv =
