--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,49 @@
+# Python bytecode / caches
 *.py[cod]
-__pycache__
-.pytest_cache
+__pycache__/
+.pytest_cache/
 
-### Editor and IDE artifacts
+# Editor and IDE artifacts
 .idea/
+.vscode/
+*.iml
 
 # C extensions
 *.so
 
-# Packages
+# Packages / build artifacts
 *.egg
 *.egg-info
-/dist
-/build
-/eggs
-/parts
-/bin
-/var
-/sdist
-/develop-eggs
+/dist/
+/build/
+/eggs/
+/parts/
+/bin/
+/var/
+/sdist/
+/develop-eggs/
 /.installed.cfg
-/lib
-/lib64
+/lib/
+/lib64/
+wheels/
+pip-wheel-metadata/
 
 # Installer logs
 pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 .cache/
 .pytest_cache/
 .coverage
 .coverage.*
-.tox
+.tox/
+nox/
 coverage.xml
 htmlcov/
+coverage/
+test-results/
+junit.xml
 
 # Virtual environments
 /venv/
@@ -41,15 +51,26 @@ htmlcov/
 /.venv/
 /.venv-*/
 
+# Python type checkers / linters
+.mypy_cache/
+.ruff_cache/
+.pyre/
+.pytype/
+
 # The Silver Searcher
 .agignore
 
 # OS X artifacts
 *.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 
 # Logging
 log/
 logs/
+*.log
 chromedriver.log
 ghostdriver.log
 
@@ -58,7 +79,7 @@ output/*.html
 output/*/index.html
 
 # Sphinx
-docs/_build
+docs/_build/
 docs/modules.rst
 docs/xblocks_contrib.rst
 docs/xblocks_contrib.*.rst
@@ -71,3 +92,31 @@ requirements/private.txt
 *.mo
 *.pot
 *.po
+
+# Node.js / npm / yarn / pnpm
+node_modules/
+**/node_modules/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+.npm/
+.yarn/
+.pnpm-store/
+
+# Webpack / bundling outputs
+public/
+**/public/
+
+webpack-stats.json
+webpack-stats.*
+stats.json
+
+*.hot-update.*
+*.map
+
+# Karma
+.karma/
+**/.karma/
