fix: updated npm command

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build JavaScript bundles
         run: |
-          npm install
+          npm ci
           npm run build
 
       - name: Install dependencies
