--- a/package.json
+++ b/package.json
@@ -5,6 +5,20 @@
   ],
   "scripts": {
     "test": "npm run test --workspaces",
-    "test:ci": "npm run test:ci --workspaces"
+    "test:ci": "npm run test:ci --workspaces",
+    "build": "webpack --config xblocks_contrib/video/webpack.prod.config.js",
+    "build-dev": "webpack --config xblocks_contrib/video/webpack.dev.config.js"
+  },
+  "dependencies": {
+    "draggabilly": "^3",
+    "edx-ui-toolkit": "^1",
+    "hls.js": "^1",
+    "underscore": "^1",
+    "webpack-merge": "^6"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^4",
+    "webpack": "^5",
+    "webpack-cli": "^5"
   }
 }
