fix: review changes

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "xblocks_contrib/*/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "build:dev": "npm run build:dev --workspaces",
-    "test": "npm run test --workspaces",
-    "test:ci": "npm run test:ci --workspaces"
+    "build": "npm run build --workspaces --if-present",
+    "build-dev": "npm run build-dev --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "test:ci": "npm run test:ci --workspaces --if-present"
   }
 }
