Automate JS asset compilation and update package manifest (#158)
* fix: package flow & paths

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "workspaces": [
-    "xblocks_contrib/*/static"
+    "xblocks_contrib/*/*"
   ],
   "scripts": {
-    "test": "npm run test --workspaces",
-    "test:ci": "npm run test:ci --workspaces"
+    "build": "npm run build --workspaces --if-present",
+    "build-dev": "npm run build-dev --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "test-ci": "npm run test-ci --workspaces --if-present"
   }
 }
