--- a/.github/workflows/javascript-tests.yml
+++ b/.github/workflows/javascript-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20]
+        node-version: [24]
 
     steps:
       - name: Check out repository
@@ -44,4 +44,4 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test:ci || echo "⚠️ Tests skipped — no workspaces available"
+        run: npm run test-ci || echo "⚠️ Tests skipped — no workspaces available"
