--- a/xblocks_contrib/discussion/package.json
+++ b/xblocks_contrib/discussion/package.json
@@ -2,12 +2,29 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
-    "build-dev": "webpack --config webpack.dev.config.js"
+    "build-dev": "webpack --config webpack.dev.config.js",
+    "test": "karma start karma.conf.js",
+    "test:ci": "xvfb-run --auto-servernum karma start karma.conf.js"
   },
   "devDependencies": {
     "append-prepend-loader": "^1.0.0",
+    "backbone": "^1.4.0",
     "copy-webpack-plugin": "13.0.1",
+    "draggabilly": "^3.0.0",
+    "edx-ui-toolkit": "^1",
     "imports-loader": "^5.0.0",
+    "jasmine-core": "^4.6.0",
+    "jasmine-jquery": "git+https://git@github.com/velesin/jasmine-jquery.git#ebad463d592d3fea00c69f26ea18a930e09c7b58",
+    "jquery": "^3.6.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.0",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-regex-preprocessor": "^1.0.1",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-spec-reporter": "^0.0.36",
+    "underscore": "^1.13.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
