fix: fix package versions

--- a/xblocks_contrib/discussion/package.json
+++ b/xblocks_contrib/discussion/package.json
@@ -8,23 +8,25 @@
   },
   "devDependencies": {
     "append-prepend-loader": "^1.0.0",
-    "backbone": "^1.4.0",
+    "backbone": "^1",
+    "backbone-associations": "^0.6",
+    "backbone.paginator": "^2",
     "copy-webpack-plugin": "13.0.1",
     "draggabilly": "^3.0.0",
     "edx-ui-toolkit": "^1",
     "imports-loader": "^5.0.0",
-    "jasmine-core": "^4.6.0",
+    "jasmine-core": "2.6.4",
     "jasmine-jquery": "git+https://git@github.com/velesin/jasmine-jquery.git#ebad463d592d3fea00c69f26ea18a930e09c7b58",
-    "jquery": "^3.6.0",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.0",
-    "karma-firefox-launcher": "^2.1.0",
-    "karma-jasmine": "^5.1.0",
+    "jquery": "^2",
+    "karma": "^0.13",
+    "karma-chrome-launcher": "^3",
+    "karma-coverage": "^2",
+    "karma-firefox-launcher": "^2",
+    "karma-jasmine": "^0.3",
     "karma-regex-preprocessor": "^1.0.1",
     "karma-sourcemap-loader": "^0.4.0",
-    "karma-spec-reporter": "^0.0.36",
-    "underscore": "^1.13.0",
+    "karma-spec-reporter": "0.0.20",
+    "underscore": "^1",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
