fix: fix comments and sync package versions with platform

--- a/xblocks_contrib/discussion/package.json
+++ b/xblocks_contrib/discussion/package.json
@@ -5,10 +5,13 @@
     "build-dev": "webpack --config webpack.dev.config.js"
   },
   "devDependencies": {
+    "backbone": "^1",
+    "backbone-associations": "^0.6",
+    "backbone.paginator": "^2",
     "append-prepend-loader": "^1.0.0",
     "copy-webpack-plugin": "13.0.1",
-    "imports-loader": "^5.0.0",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
+    "imports-loader": "^0.8",
+    "webpack": "^5",
+    "webpack-cli": "^5"
   }
 }
